Added endpoint for edit name, and password. Change validations for creating a new User since new column has been added. Changes on swagger
