# routes/usuarios.route.js
@@ -11,10 +11,12 @@ const { auth } = require('../middleware/auth');
 const { verify } = require('../middleware/verify');
 
 router.post('/', auth, verify, userController.addUsuario);
+router.get('/all', auth, userController.getUsuarios);
 router.get('/:userID', auth, userController.getUsuario);
 router.delete('/:userID', auth, userController.deleteUsuario);
-router.patch('/password/:userID', auth, userController.patchPassword);
-router.patch('/type/:userID', auth, verify, userController.patchType);
-router.get('/todos/usuarios', auth, userController.getUsuarios);
+router.patch('/edit/my-password/:userID', auth, userController.patchMyPassword)
+router.patch('/edit/user-password/:userID', auth, verify, userController.patchUserPassword);
+router.patch('/edit/name/:userID', auth, userController.patchName);
+router.patch('/edit/type/:userID', auth, verify, userController.patchType);
 
 module.exports = router;
